test/data/resolver/valid/node_mixed_projection.cypher
MATCH (p:Person) RETURN p, p.id, p.name
