test/data/resolver/invalid/parameter_type_conflict_nullability.cypher
MATCH (p:Person), (q:Person) WHERE p.name = $x AND q.nickname = $x RETURN p.name
